--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 </head>
 <body>
     <h1>Thank You!</h1>
-    <p>Your password change was successful. You can now return to the application.</p>
-    <p><a href="https://your-application-homepage.com">Go to Homepage</a></p>
+    <p>Your password change was successful.</p>
 </body>
 </html>
